--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,7 @@
         </section>
 
         <aside id="sidebar">
+		{% include navigation.html %}
           {% if site.show_downloads %}
             <a href="{{ site.github.zip_url }}" class="button">
               <small>Download</small>
