--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
 <nav>
   <a href="/" {% if page.url == "/" %}style="color: red;"{% endif %}>
     Home
-  </a>
+  </a> &nbsp;&nbsp;&nbsp;
   <a href="/about.html" {% if page.url == "/about.html" %}style="color: red;"{% endif %}>
     About
   </a>
