--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,12 +26,12 @@
 
     <div id="content-wrapper">
       <div class="inner clearfix">
+	    <h3>{% include navigation.html %}</h3>
         <section id="main-content">
           {{ content }}
         </section>
 
         <aside id="sidebar">
-		  {% include navigation.html %}
           {% if site.show_downloads %}
             <a href="{{ site.github.zip_url }}" class="button">
               <small>Download</small>
