--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,7 +2,13 @@
   <a href="/" {% if page.url == "/" %}style="color: red;"{% endif %}>
     Home
   </a> &nbsp;&nbsp;&nbsp;
-  <a href="/about.html" {% if page.url == "/about.html" %}style="color: red;"{% endif %}>
-    About
+  <a href="/research.html" {% if page.url == "/research.html" %}style="color: red;"{% endif %}>
+    Research
+  </a> &nbsp;&nbsp;&nbsp;
+  <a href="/cv.html" {% if page.url == "/cv.html" %}style="color: red;"{% endif %}>
+    CV
+  </a> &nbsp;&nbsp;&nbsp;
+  <a href="/publications.html" {% if page.url == "/publications.html" %}style="color: red;"{% endif %}>
+    Publications
   </a>
 </nav>
